# api_flowix_template

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
api_flowix_template/: __init__.py  __main__.py
api_flowix_template/api/: __init__.py
api_flowix_template/api/foo_admin/: router.py
api_flowix_template/api/foo_admin/dummy/: __init__.py  views.py
api_flowix_template/api/foo_admin/monitoring/: __init__.py
api_flowix_template/core/: application.py  config.py  logging.py
api_flowix_template/dao/: dummy_dao.py
api_flowix_template/db/: base.py  utils.py
api_flowix_template/db/dao/: dummy_dao.py
api_flowix_template/db/migrations/: env.py
api_flowix_template/db/models/: __init__.py
api_flowix_template/models/: dummy_model.py
api_flowix_template/services/: __init__.py
api_flowix_template/tests/: __init__.py  conftest.py  test_dummy.py  test_echo.py  test_kafka.py  test_redis.py
